--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images\profile picture-modified.png" alt="Sakshay's Profile Picture" style="width:200px;hieght:200px;"></td>
+      <td><img src="images\sakshay.png" alt="Sakshay's Profile Picture" style="width:200px;hieght:200px;"></td>
       <td>
         <h1>Sakshay Sharma</h1>
         <p><em>Coding Newbie Learning Through <a href="https://www.udemy.com" target="_blank"><strong>Udemy</strong>.</em></p></a>
